# files

./: .dockerignore  .gitignore  CONTEXT.md  Cargo.toml  Dockerfile  openapi.yaml
.github/workflows/: release.yaml  sdk-publish.yaml
clients/node/: package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
clients/node/src/: index.test.ts  index.ts
docs/adr/: 0001-layout-owns-on-disk-names-not-http-routes.md  0002-uncancellable-commit-landed-trace-grave-cohort-settlement.md
docs/bugfixes/: reconcile-gc-dedup-race.md  reconcile-vanished-entry-aborts-pass.md
docs/increments/arch-deepening-2026-07/: R-1-erect-layout-seam.md  R-2-store-making-side.md  R-3-listing-walker.md  R-4-reconcile-layout.md  R-5-keylocks-two-arg.md  R-6-public-reserved-routes.md
docs/plans/: 2026-06-30-files-design.md  2026-06-30-files.md  2026-07-02-files-store-refactor-design.md  2026-07-02-files-store-refactor.md
docs/refactors/: arch-deepening-2026-07.md
scripts/: f14-witness-gate.sh
src/: auth.rs  capacity.rs  clock.rs  config.rs  error.rs  layout.rs  lib.rs  main.rs  meta.rs  path.rs
src/http/: extract.rs  internal.rs  mod.rs  openapi.rs  public.rs  ranged.rs  response.rs  state.rs  tests.rs
src/http/internal/: buckets.rs  (+4 more)
src/store/: atomic.rs  buckets.rs  listing.rs  locks.rs  mod.rs  objects.rs  pins.rs  reconcile.rs  tests.rs
tests/: adversarial.rs  contract.rs  e2e.rs  layout_tree.rs  openapi.rs  reconcile_vanishing_entries.rs  regression_reconcile_gc_dedup_race.rs  repro_concurrent_puts_reconcile.rs  stress_concurrent_puts_reconcile.rs
tests/common/: mod.rs
(+89 files in other folders)
