[package]
name = "files"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["http1", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
subtle = "2.6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
bytes = "1"
nix = { version = "0.29", features = ["fs"] }
mime_guess = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
